--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,7 @@
     </div>
 </section>
 
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8IQIuWNOPXPTPOSXdsMaPzDqeHvUG5Fo&libraries=places&callback=APP.Main.initMap">
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8IQIuWNOPXPTPOSXdsMaPzDqeHvUG5Fo&libraries=places&callback=APP.Main.initMap">
 </script>
 
 <div id="myModal" class="modal fade">
