--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     </div>
 </section>
 
-<script async defer
+<script  defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8IQIuWNOPXPTPOSXdsMaPzDqeHvUG5Fo&libraries=places&callback=APP.Main.initMap">
 </script>
 
