--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
         </div>
     </div>
 </section>
+
+<!-- Map section-->
 <section class="wrapper">
     <div id="map"></div>
     <div class="searchBar">
@@ -68,6 +70,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8IQIuWNOPXPTPOSXdsMaPzDqeHvUG5Fo&libraries=places&callback=APP.Main.initMap">
 </script>
 
+<!-- Modal Bootstrap-->
 <div id="myModal" class="modal fade">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
